# matrixGenerator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: PrintRandomNumbers.hpp  RandomGenerator.hpp  RandomGeneratorAbstract.hpp  ReadWindowsSize.hpp  TimeConversion.hpp  TimeMeasurements.hpp
source/: CMakeLists.txt  PrintRandomNumbers.cpp  RandomGenerator.cpp  ReadWindowsSize.cpp  TimeConversion.cpp  TimeMeasurements.cpp  main.cpp
source/include/: PrintRandomNumbers.hpp  RandomGenerator.hpp  RandomGeneratorAbstract.hpp  ReadWindowsSize.hpp  TimeMeasurements.hpp
source/src/: PrintRandomNumbers.cpp  RandomGenerator.cpp  ReadWindowsSize.cpp  TimeMeasurements.cpp  main.cpp
source/src/config/: values.txt
tests/: CMakeLists.txt  PrintRandomNumbersTest.cpp  RandomGeneratorTest.cpp  ReadWindowsSizeTest.cpp  TimeConversionTest.cpp  TimeMeasurementsTest.cpp
tests/src/: PrintRandomNumbersTest.cpp  RandomGeneratorTest.cpp  ReadWindowsSizeTest.cpp  TimeMeasurementsTest.cpp
